<resources>
    <string name="app_name">urna</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_corrigir">Corrigir</string>
    <string name="btn_branco">Branco</string>
    <string name="Btn_1">1</string>
    <string name="Btn_2">2</string>
    <string name="Btn_3">3</string>
    <string name="Btn_4">4</string>
    <string name="Btn_7">7</string>
    <string name="Btn_0">0</string>
    <string name="Btn_6">6</string>
    <string name="Btn_9">9</string>
    <string name="Btn_5">5</string>
    <string name="Btn_8">8</string>
    <string name="digite_seu_voto">Digite seu voto!</string>
    <string name="digite_seu_voto_aqui">Digite seu Voto aqui!</string>
    <string name="_1">1</string>
</resources>