<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonBranco"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="96dp"
        android:text="@string/btn_branco"
        android:textColor="#F6F6F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCorrigir"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="28dp"
        android:text="@string/btn_corrigir"
        android:textColor="#F30C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonConfirmar"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="96dp"
        android:text="@string/btn_confirmar"
        android:textColor="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="376dp"
        android:layout_height="193dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonConfirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886">

        <Button
            android:id="@+id/button1"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/Btn_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/Btn_2"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/button30"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/Btn_3"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/button4"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/Btn_4"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button7"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/Btn_7"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button0"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/Btn_0"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/button6"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/Btn_6"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/button9"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/Btn_9"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/button5"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/Btn_5"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button8"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/Btn_8"
            app:layout_column="1"
            app:layout_row="2" />
    </androidx.gridlayout.widget.GridLayout>

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="number|text"
        android:textAllCaps="true"
        android:textColor="#9DF643"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

</androidx.constraintlayout.widget.ConstraintLayout>

